--- a/edu.javaScript.ejercicio2JavaScript/src/main/webapp/index.html
+++ b/edu.javaScript.ejercicio2JavaScript/src/main/webapp/index.html
@@ -34,7 +34,7 @@
 	<h1>Calculadora peso corporal</h1>
 	<form name="calculadoraPesoCorporal">
 		Edad:
-		<input type="number" name="edadForm" min="1">
+		<input type="number" name="edadForm" min="1" max="100">
 		<br>
 		Altura:
 		<input type="number" name="alturaForm" min="1">
